<resources>
    <string name="app_name">CoasterCounter</string>
    <string name="activity_main_titel">CoasterCounter</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_navigation_einstellungen">Einstellungen</string>
    <string name="action_navigation_perstatistik">Persönliche Statistik</string>
    <string name="action_navigation_parkstatistik">Parkstatistik</string>
    <string name="string_dashboard_parkname">Parkname:</string>
    <string name="string_dashboard_parkauswahl">Park auswählen</string>
    <string name="string_dashboard_badges">Badges suchen</string>
    <string name="string_dashboard_achterbahn">Achterbahn anzeigen</string>
    <string name="string_navigation_angemeldet">Angemeldet als [name]</string>
    <string name="action_navigation_sofortfeedback">Sofortfeedback</string>
    <string name="action_navigation_abmelden">Abmelden</string>
    <string name="string_achterbahnanzeigen_name">Achterbahnname</string>
    <string name="string_achterbahnsuchen">Achterbahn suchen</string>
    <string name="string_parkauswahl">Park suchen</string>
    <string name="string_searchFail">Item not found</string>
    <string name="string_na">N/A</string>
    <string name="bisher_gefahren">Bisher gefahren:</string>
    <string name="bild_von_der_bahn">Bild von der Bahn</string>
    <string name="laenge">Länge:</string>
    <string name="hoehe">Höhe:</string>
    <string name="abfahrt">Abfahrt:</string>
    <string name="inversionen">Inversionen:</string>
    <string name="elemente">Elemente:</string>
    <string name="kapazitaet">Kapazität:</string>
    <string name="wagen">Wagen:</string>
    <string name="zuege">Züge:</string>
    <string name="baujahr">Baujahr:</string>
    <string name="park">Park:</string>
    <string name="erbauer">Erbauer:</string>
    <string name="theme">Theme:</string>
    <string name="geschwindigkeit">Geschwindigkeit:</string>
    <string name="bewertung">Bewertung:</string>
    <string name="kurzbeschreibung">Kurzbeschreibung:</string>
    <string name="string_totalCount">Total Count:</string>
    <string name="string_counter">0</string>
    <string name="string_parkanzeigen_name">Parkname</string>
    <string name="string_parkanzeigen_email">E-Mail:</string>
    <string name="string_parkanzeigen_addresse">Adresse:</string>
    <string name="string_parkanzeigen_telephone">Telephone:</string>
    <string name="string_parkanzeigen_fax">Fax:</string>
    <string name="string_parkanzeigen_besucherzahlen">Besucherzahlen:</string>
    <string name="string_parkanzeigen_flaeche">Fläche:</string>
    <string name="string_parkanzeigen_website">Website:</string>
    <string name="string_parkanzeigen_kurzbeschreibung">Kurzbeschreibung:</string>
    <string name="string_parkanzeigen_bewertung">Bewertung:</string>
    <string name="string_parkanzeigen_thema">Thema:</string>
    <string name="string_parkanzeigen_betreiber">Betreiber:</string>
    <string name="string_parkanzeigen_bisher_besucht">Bisher besucht</string>
    <string name="string_parkanzeigen_parklogo">Parklogo</string>
    <string name="string_parkanzeigen">Check in</string>

</resources>