<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/id_action_angemeldet"
        android:title="@string/string_navigation_angemeldet" />
    <item
        android:id="@+id/id_action_parkstatistik"
        android:title="@string/action_navigation_parkstatistik"
        app:showAsAction="never" />
    <item
        android:id="@+id/id_action_perstatistik"
        android:title="@string/action_navigation_perstatistik" />
    <item
        android:id="@+id/id_action_einstellungen"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_navigation_einstellungen"
        app:showAsAction="never" />
    <item android:title="@string/action_navigation_sofortfeedback"
          android:id="@+id/id_action_sofortfeedback"/>
    <item android:id="@+id/id_action_abmelden" android:title="@string/action_navigation_abmelden"/>


</menu>