<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".dashboard.DashboardView"
                                                   android:hapticFeedbackEnabled="false">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/navigation"
            app:showAsAction="ifRoom"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Parkname_Dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:text="@string/string_dashboard_parkname"
                tools:textSize="36sp" />

            <ImageView
                android:id="@+id/image_dashboard_logo"
                android:layout_width="wrap_content"
                android:layout_height="154dp"
                android:visibility="visible"
                android:layout_gravity="center"
                app:srcCompat="@drawable/coastercounterlogo" />

            <Button
                android:id="@+id/button_dashboard_parkauswahl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="parkSearch"
                android:layout_gravity="center"
                android:text="@string/string_dashboard_parkauswahl" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_dashboard_totalCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/string_totalCount"
                    android:textAlignment="textEnd"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_dashboard_totalCounterAnzeige"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/string_counter"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/button_dashboard_badges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="10dp"
                android:text="@string/string_dashboard_badges" />

            <Button
                android:id="@+id/button_dashboard_achterbahn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="starteSuche"
                android:layout_gravity="center"
                android:text="@string/string_dashboard_achterbahn" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>