<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="main.CoasterCount">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/navigation"
            app:showAsAction="ifRoom" />

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/text_parkanzeigen_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/string_parkanzeigen_name"
                    android:textAlignment="center"
                    android:textSize="36sp" />

            <ImageView
                    android:id="@+id/imageView_parkanzeigen"
                    android:layout_width="match_parent"
                    android:layout_height="154dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/string_parkanzeigen_parklogo"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/string_parkanzeigen_bisher_besucht" />

                <TextView
                        android:id="@+id/textView_parkanzeigen_counter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/string_na" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/button_parkanzeigen_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.5"

                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="count"
                        android:paddingEnd="15dp"
                        android:paddingRight="15dp"
                        android:src="@android:drawable/ic_input_add"
                        app:backgroundTint="@color/colorPrimary"
                        tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:stretchColumns="*">

                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="3dp"
                        android:paddingBottom="3dp">


                    <TextView
                            android:id="@+id/textView19"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/string_parkanzeigen_addresse"
                            android:textStyle="bold" />

                    <TextView
                            android:id="@+id/text_parkanzeigen_addresse"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:paddingEnd="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/string_na"
                            tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <TextView
                            android:id="@+id/textView17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_parkanzeigen_telephone"
                            android:textStyle="bold" />

                    <TextView
                            android:id="@+id/text_parkanzeigen_telephone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@string/string_na"
                            tools:ignore="RtlHardcoded" />
                </TableRow>

                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="3dp">

                    <TextView
                            android:id="@+id/textView20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_parkanzeigen_besucherzahlen"
                            android:textStyle="bold" />

                    <TextView
                            android:id="@+id/text_parkanzeigen_besucherzahlen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:paddingEnd="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/string_na"
                            tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <TextView
                            android:id="@+id/textView22"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_parkanzeigen_fax"
                            android:textStyle="bold" />

                    <TextView
                            android:id="@+id/text_parkanzeigen_fax"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@string/string_na"
                            tools:ignore="RtlHardcoded" />
                </TableRow>

                <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingBottom="3dp">

                    <TextView
                            android:id="@+id/textView38"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_parkanzeigen_flaeche"
                            android:textStyle="bold" />

                    <TextView
                            android:id="@+id/text_parkanzeigen_flaeche"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:paddingEnd="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/string_na"
                            tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <TextView
                            android:id="@+id/textView26"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_parkanzeigen_email"
                            android:textStyle="bold" />

                    <TextView
                            android:id="@+id/text_parkanzeigen_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@string/string_na"
                            tools:ignore="RtlHardcoded" />
                </TableRow>

                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="3dp">

                    <TextView
                            android:id="@+id/textView28"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_parkanzeigen_thema"
                            android:textStyle="bold" />

                    <TextView
                            android:id="@+id/text_parkanzeigen_thema"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:paddingRight="10dp"
                            android:text="@string/string_na"
                            tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <TextView
                            android:id="@+id/textView30"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_parkanzeigen_website"
                            android:textStyle="bold" />

                    <TextView
                            android:id="@+id/text_parkanzeigen_website"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@string/string_na"
                            tools:ignore="RtlHardcoded" />
                </TableRow>
            </TableLayout>

            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:stretchColumns="*">


                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:id="@+id/textView34"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_parkanzeigen_betreiber"
                            android:textStyle="bold" />

                    <TextView
                            android:id="@+id/text_parkanzeigen_betreiber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@string/string_na"
                            tools:ignore="RtlHardcoded" />
                </TableRow>

                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:id="@+id/textView40"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bewertung"
                            android:textStyle="bold" />
                </TableRow>
            </TableLayout>
            <RatingBar
                    android:id="@+id/parkanzeigen_ratingbar"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="1"
                    android:layout_gravity="right"
                    tools:ignore="RtlHardcoded" />


            <TextView
                    android:id="@+id/textView42"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/string_parkanzeigen_kurzbeschreibung"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/text_parkanzeigen_kurzbeschreibung"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/string_na" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>